xliff-22/test-suite/core/invalid/bad_InvalidHexRangeOnCp.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en" trgLang="fr">
 <file id="f1">
  <unit id="1">
   <segment> <!-- U+00a0 is not an XML invalid character and must not be coded with cp -->
    <source><cp hex="00a0"/></source>
   </segment>
  </unit>
 </file>
</xliff>
